--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.50.5",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
+    "papaparse": "^5.5.3",
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2"
   },
